# GameOfLife

./: Cargo.toml
input/: test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
src/: main.rs
