[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.3", features = ["rayon"]}
image = "0.24.7"
rayon = "1.8.1"


[dependencies.sdl2]
version = "0.36.0"